--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -8,7 +8,7 @@ proxies:
   - &id001
     name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
     type: vmess
-    server: 104.19.250.15
+    server: 104.18.36.119
     port: 2052
     cipher: auto
     uuid: aec82fa6-ab70-4d0a-e7fb-422ef729d961
@@ -23,7 +23,7 @@ proxies:
   - &id002
     name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
     type: vmess
-    server: 104.18.19.191
+    server: 104.19.250.15
     port: 2052
     cipher: auto
     uuid: aec82fa6-ab70-4d0a-e7fb-422ef729d961
@@ -38,7 +38,7 @@ proxies:
   - &id003
     name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
     type: vmess
-    server: 104.18.36.119
+    server: 104.18.19.191
     port: 2052
     cipher: auto
     uuid: aec82fa6-ab70-4d0a-e7fb-422ef729d961
@@ -51,6 +51,67 @@ proxies:
       headers:
         host: helanv6cf.inekokkk.top
   - &id004
+    name: 🇺🇸_US_美国_1
+    type: ss
+    server: 205.134.180.151
+    port: 443
+    password: 5cp9Z3iWnJZ2
+    cipher: chacha20-ietf-poly1305
+  - &id005
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国
+    type: trojan
+    server: 223.113.54.154
+    port: 15274
+    udp: true
+    password: MyYoZhfX
+    skip-cert-verify: true
+    network: tcp
+  - &id006
+    name: 🇺🇸_US_美国_2
+    type: ss
+    server: 23.154.136.35
+    port: 7001
+    password: RexnBgU7EV5ADxG
+    cipher: aes-256-gcm
+  - &id007
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国
+    type: vmess
+    server: 172.67.204.84
+    port: 2082
+    cipher: auto
+    uuid: 7b39e430-e14d-4920-979b-aa7aa2f5010c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 
+        /telegram-impr0vpn,impr0vpn,telegram-impr0vpn,telegram-impr0vpn,telegram-impr0vpn,telegram-impr0vpn,telegram-impr0vpn,telegram-impr0vpn,telegram-impr0vpn,telegram-impr0vpn,telegram-impr0vpn,telegram-impr0vpn,hosv2rayng,-V2raynggggg-?ed=2056
+      headers:
+        host: impr0.impr0.impr0.impr0.99-100uxprjy9vbpushl-djnbtbw28yf9ss2m.impr0sub.com
+  - &id008
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: russia.com
+    port: 2095
+    cipher: auto
+    uuid: 64a57b5f-45e0-40c3-8316-97d0ff53fd96
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: sssub.v2.001.ssrsub.com
+  - &id009
+    name: 🇺🇸_US_美国_4
+    type: ss
+    server: 38.86.135.141
+    port: 8882
+    password: kDWvXYZoTBcGkC4
+    cipher: aes-256-gcm
+  - &id010
     name: 🇱🇺_LU_卢森堡
     type: vmess
     server: 45.82.31.164
@@ -61,13 +122,13 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: http
-  - &id005
-    name: 🇺🇸_US_美国_1
+  - &id011
+    name: 🇺🇸_US_美国_5
     type: vmess
-    server: cdn.bethebest.eu.org
-    port: 8880
+    server: s1c.v2.v001sss.xyz
+    port: 2082
     cipher: auto
-    uuid: 86a0a07a-d0ed-480a-aa2a-f1a96592747e
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -75,49 +136,39 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: us.bethebest.eu.org
-  - &id006
-    name: 🇩🇪_DE_德国_1
-    type: ss
-    server: 80.92.204.106
-    port: 9094
-    password: rpgbNnU9rDDU4aWZ
-    cipher: aes-256-cfb
-  - &id007
-    name: 🇺🇸_US_美国_2
-    type: ss
-    server: 52.88.161.5
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id008
-    name: 🇩🇪_DE_德国_2
-    type: ss
-    server: 80.92.204.106
-    port: 9080
-    password: VP8ZPxQpJtZRCjfZ
-    cipher: aes-256-cfb
-  - &id009
-    name: 🇺🇸_US_美国_3
+        host: s1c.v2.v001sss.xyz
+  - &id012
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: 172.67.130.140
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id013
+    name: 🇺🇸_US_美国_7
     type: ss
     server: 212.102.47.198
     port: 443
     password: shadowsocks
     cipher: aes-128-cfb
-  - &id010
-    name: 🇺🇸_US_美国_4
-    type: ss
-    server: 156.146.38.163
+  - &id014
+    name: 🇭🇰_HK_香港->🇺🇸_US_美国
+    type: trojan
+    server: us01.trojanyyds.xyz
     port: 443
-    password: shadowsocks
-    cipher: aes-128-cfb
-  - &id011
-    name: 🇳🇱_NL_荷兰
-    type: ss
-    server: 109.201.152.181
-    port: 443
-    password: shadowsocks
-    cipher: aes-128-cfb
+    udp: true
+    password: 1640b579-cff8-46bc-a657-3860b5455712
+    sni: us01.trojanyyds.xyz
+    skip-cert-verify: true
+    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -155,6 +206,9 @@ proxy-groups:
       - *id009
       - *id010
       - *id011
+      - *id012
+      - *id013
+      - *id014
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -171,6 +225,9 @@ proxy-groups:
       - *id009
       - *id010
       - *id011
+      - *id012
+      - *id013
+      - *id014
   - name: SELECT
     type: select
     proxies:
@@ -185,6 +242,9 @@ proxy-groups:
       - *id009
       - *id010
       - *id011
+      - *id012
+      - *id013
+      - *id014
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
