--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -52,45 +52,6 @@ proxies:
         host: helanv6cf.inekokkk.top
   - &id004
     name: 🇺🇸_US_美国_1
-    type: ss
-    server: 205.134.180.151
-    port: 443
-    password: 5cp9Z3iWnJZ2
-    cipher: chacha20-ietf-poly1305
-  - &id005
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国
-    type: trojan
-    server: 223.113.54.154
-    port: 15274
-    udp: true
-    password: MyYoZhfX
-    skip-cert-verify: true
-    network: tcp
-  - &id006
-    name: 🇺🇸_US_美国_2
-    type: ss
-    server: 23.154.136.35
-    port: 7001
-    password: RexnBgU7EV5ADxG
-    cipher: aes-256-gcm
-  - &id007
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国
-    type: vmess
-    server: 172.67.204.84
-    port: 2082
-    cipher: auto
-    uuid: 7b39e430-e14d-4920-979b-aa7aa2f5010c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 
-        /telegram-impr0vpn,impr0vpn,telegram-impr0vpn,telegram-impr0vpn,telegram-impr0vpn,telegram-impr0vpn,telegram-impr0vpn,telegram-impr0vpn,telegram-impr0vpn,telegram-impr0vpn,telegram-impr0vpn,telegram-impr0vpn,hosv2rayng,-V2raynggggg-?ed=2056
-      headers:
-        host: impr0.impr0.impr0.impr0.99-100uxprjy9vbpushl-djnbtbw28yf9ss2m.impr0sub.com
-  - &id008
-    name: 🇺🇸_US_美国_3
     type: vmess
     server: russia.com
     port: 2095
@@ -104,14 +65,30 @@ proxies:
       path: /api/v3/download.getFile
       headers:
         host: sssub.v2.001.ssrsub.com
-  - &id009
-    name: 🇺🇸_US_美国_4
+  - &id005
+    name: 🇺🇸_US_美国_2
     type: ss
-    server: 38.86.135.141
-    port: 8882
-    password: kDWvXYZoTBcGkC4
+    server: 38.86.135.185
+    port: 443
+    password: pKEW8JPByTVTLtM
     cipher: aes-256-gcm
-  - &id010
+  - &id006
+    name: 🇺🇸_US_美国_3
+    type: ss
+    server: 52.38.200.248
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id007
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国
+    type: trojan
+    server: 36.151.195.46
+    port: 20344
+    udp: true
+    password: MyYoZhfX
+    skip-cert-verify: true
+    network: tcp
+  - &id008
     name: 🇱🇺_LU_卢森堡
     type: vmess
     server: 45.82.31.164
@@ -122,53 +99,87 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: http
-  - &id011
+  - &id009
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: russia.com
+    port: 8880
+    cipher: auto
+    uuid: 64a57b5f-45e0-40c3-8316-97d0ff53fd96
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: sssub.v2.001.ssrsub.com
+  - &id010
     name: 🇺🇸_US_美国_5
-    type: vmess
-    server: s1c.v2.v001sss.xyz
-    port: 2082
-    cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
-    alterId: 0
-    tls: false
+    type: trojan
+    server: us04.421421.xyz
+    port: 20230
+    udp: true
+    password: d971ee7a-32d9-402a-8a4f-d2135d48a47b
+    sni: 421421.xyz
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: s1c.v2.v001sss.xyz
-  - &id012
+    network: tcp
+  - &id011
     name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 172.67.130.140
-    port: 2082
-    cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: s1c.v2.v001sss.xyz
-  - &id013
+    type: ss
+    server: 34.222.133.159
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id012
     name: 🇺🇸_US_美国_7
+    type: ss
+    server: 38.110.1.105
+    port: 8118
+    password: cdBIDV42DCwnfIN
+    cipher: aes-256-gcm
+  - &id013
+    name: 🇺🇸_US_美国_8
     type: ss
     server: 212.102.47.198
     port: 443
     password: shadowsocks
     cipher: aes-128-cfb
   - &id014
-    name: 🇭🇰_HK_香港->🇺🇸_US_美国
-    type: trojan
-    server: us01.trojanyyds.xyz
-    port: 443
-    udp: true
-    password: 1640b579-cff8-46bc-a657-3860b5455712
-    sni: us01.trojanyyds.xyz
-    skip-cert-verify: true
-    network: tcp
+    name: 🇺🇸_US_美国_9
+    type: ss
+    server: 38.75.136.6
+    port: 5500
+    password: KixLvKzwjekG00rm
+    cipher: aes-256-gcm
+  - &id015
+    name: 🇺🇸_US_美国_10
+    type: ss
+    server: 38.110.1.122
+    port: 7306
+    password: FoOiGlkAA9yPEGP
+    cipher: aes-256-gcm
+  - &id016
+    name: 🇺🇸_US_美国_11
+    type: ss
+    server: 38.110.1.122
+    port: 8090
+    password: PCnnH6SQSnfoS27
+    cipher: aes-256-gcm
+  - &id017
+    name: 🇺🇸_US_美国_12
+    type: ss
+    server: 38.110.1.105
+    port: 9101
+    password: e4FCWrgpkji3QY
+    cipher: aes-256-gcm
+  - &id018
+    name: 🇺🇸_US_美国_13
+    type: ss
+    server: 38.110.1.105
+    port: 5003
+    password: g5MeD6Ft3CWlJId
+    cipher: aes-256-gcm
 proxy-groups:
   - name: PROXY
     type: select
@@ -209,6 +220,10 @@ proxy-groups:
       - *id012
       - *id013
       - *id014
+      - *id015
+      - *id016
+      - *id017
+      - *id018
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -228,6 +243,10 @@ proxy-groups:
       - *id012
       - *id013
       - *id014
+      - *id015
+      - *id016
+      - *id017
+      - *id018
   - name: SELECT
     type: select
     proxies:
@@ -245,6 +264,10 @@ proxy-groups:
       - *id012
       - *id013
       - *id014
+      - *id015
+      - *id016
+      - *id017
+      - *id018
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
