--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,7 +6,7 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
     type: vmess
     server: 104.18.36.119
     port: 2052
@@ -21,6 +21,21 @@ proxies:
       headers:
         host: helanv6cf.inekokkk.top
   - &id002
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
+    type: vmess
+    server: 104.18.19.191
+    port: 2052
+    cipher: auto
+    uuid: aec82fa6-ab70-4d0a-e7fb-422ef729d961
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: helanv6cf.inekokkk.top
+  - &id003
     name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
     type: vmess
     server: 104.19.250.15
@@ -35,13 +50,13 @@ proxies:
       path: /
       headers:
         host: helanv6cf.inekokkk.top
-  - &id003
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
+  - &id004
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
     type: vmess
-    server: 104.18.19.191
-    port: 2052
+    server: 172.67.130.140
+    port: 2082
     cipher: auto
-    uuid: aec82fa6-ab70-4d0a-e7fb-422ef729d961
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -49,9 +64,101 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: helanv6cf.inekokkk.top
-  - &id004
+        host: s1c.v2.v001sss.xyz
+  - &id005
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
+    type: vmess
+    server: 104.21.8.157
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id006
+    name: 🇷🇺_RU_俄罗斯联邦
+    type: vmess
+    server: 45.136.245.240
+    port: 12910
+    cipher: auto
+    uuid: 8259cb1c-dd6c-4739-9c88-af550d977525
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id007
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
+    type: vmess
+    server: s1c.v2.v001sss.xyz
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id008
     name: 🇺🇸_US_美国_1
+    type: ss
+    server: 15.204.87.225
+    port: 5003
+    password: g5MeD6Ft3CWlJId
+    cipher: aes-256-gcm
+  - &id009
+    name: 🇺🇸_US_美国_2
+    type: ss
+    server: 15.204.87.225
+    port: 7306
+    password: FoOiGlkAA9yPEGP
+    cipher: aes-256-gcm
+  - &id010
+    name: 🇺🇸_US_美国_3
+    type: ss
+    server: 15.204.87.225
+    port: 8118
+    password: cdBIDV42DCwnfIN
+    cipher: aes-256-gcm
+  - &id011
+    name: 🇺🇸_US_美国_4
+    type: ss
+    server: 34.219.119.71
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id012
+    name: 🇺🇸_US_美国_5
+    type: ss
+    server: 23.157.40.83
+    port: 8118
+    password: cdBIDV42DCwnfIN
+    cipher: aes-256-gcm
+  - &id013
+    name: 🇺🇸_US_美国_6
+    type: ss
+    server: 23.157.40.83
+    port: 8090
+    password: PCnnH6SQSnfoS27
+    cipher: aes-256-gcm
+  - &id014
+    name: 🇺🇸_US_美国_7
+    type: ss
+    server: 212.102.47.198
+    port: 443
+    password: shadowsocks
+    cipher: aes-128-cfb
+  - &id015
+    name: 🇺🇸_US_美国_8
     type: vmess
     server: russia.com
     port: 2095
@@ -65,42 +172,8 @@ proxies:
       path: /api/v3/download.getFile
       headers:
         host: sssub.v2.001.ssrsub.com
-  - &id005
-    name: 🇺🇸_US_美国_2
-    type: ss
-    server: 38.86.135.185
-    port: 443
-    password: pKEW8JPByTVTLtM
-    cipher: aes-256-gcm
-  - &id006
-    name: 🇺🇸_US_美国_3
-    type: ss
-    server: 52.38.200.248
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id007
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国
-    type: trojan
-    server: 36.151.195.46
-    port: 20344
-    udp: true
-    password: MyYoZhfX
-    skip-cert-verify: true
-    network: tcp
-  - &id008
-    name: 🇱🇺_LU_卢森堡
-    type: vmess
-    server: 45.82.31.164
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id009
-    name: 🇺🇸_US_美国_4
+  - &id016
+    name: 🇺🇸_US_美国_9
     type: vmess
     server: russia.com
     port: 8880
@@ -114,72 +187,29 @@ proxies:
       path: /api/v3/download.getFile
       headers:
         host: sssub.v2.001.ssrsub.com
-  - &id010
-    name: 🇺🇸_US_美国_5
-    type: trojan
-    server: us04.421421.xyz
-    port: 20230
-    udp: true
-    password: d971ee7a-32d9-402a-8a4f-d2135d48a47b
-    sni: 421421.xyz
+  - &id017
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_4
+    type: vmess
+    server: 172.67.204.84
+    port: 2082
+    cipher: auto
+    uuid: 7b39e430-e14d-4920-979b-aa7aa2f5010c
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id011
-    name: 🇺🇸_US_美国_6
+    network: ws
+    ws-opts:
+      path: 
+        /telegram-impr0vpn,impr0vpn,telegram-impr0vpn,telegram-impr0vpn,telegram-impr0vpn,telegram-impr0vpn,telegram-impr0vpn,telegram-impr0vpn,telegram-impr0vpn,telegram-impr0vpn,telegram-impr0vpn,telegram-impr0vpn,hosv2rayng,-V2raynggggg-?ed=2056
+      headers:
+        host: impr0.impr0.impr0.impr0.99-100uxprjy9vbpushl-djnbtbw28yf9ss2m.impr0sub.com
+  - &id018
+    name: 🇺🇸_US_美国_10
     type: ss
-    server: 34.222.133.159
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id012
-    name: 🇺🇸_US_美国_7
-    type: ss
-    server: 38.110.1.105
-    port: 8118
-    password: cdBIDV42DCwnfIN
-    cipher: aes-256-gcm
-  - &id013
-    name: 🇺🇸_US_美国_8
-    type: ss
-    server: 212.102.47.198
+    server: 156.146.38.163
     port: 443
     password: shadowsocks
     cipher: aes-128-cfb
-  - &id014
-    name: 🇺🇸_US_美国_9
-    type: ss
-    server: 38.75.136.6
-    port: 5500
-    password: KixLvKzwjekG00rm
-    cipher: aes-256-gcm
-  - &id015
-    name: 🇺🇸_US_美国_10
-    type: ss
-    server: 38.110.1.122
-    port: 7306
-    password: FoOiGlkAA9yPEGP
-    cipher: aes-256-gcm
-  - &id016
-    name: 🇺🇸_US_美国_11
-    type: ss
-    server: 38.110.1.122
-    port: 8090
-    password: PCnnH6SQSnfoS27
-    cipher: aes-256-gcm
-  - &id017
-    name: 🇺🇸_US_美国_12
-    type: ss
-    server: 38.110.1.105
-    port: 9101
-    password: e4FCWrgpkji3QY
-    cipher: aes-256-gcm
-  - &id018
-    name: 🇺🇸_US_美国_13
-    type: ss
-    server: 38.110.1.105
-    port: 5003
-    password: g5MeD6Ft3CWlJId
-    cipher: aes-256-gcm
 proxy-groups:
   - name: PROXY
     type: select
