--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,20 +6,45 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇷🇺_RU_俄罗斯联邦
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度
     type: vmess
-    server: 45.136.245.240
-    port: 12910
+    server: hk.wish.ml
+    port: 2052
     cipher: auto
-    uuid: 8259cb1c-dd6c-4739-9c88-af550d977525
+    uuid: c286daa2-59de-455c-8de8-ec032b6ce2e8
     alterId: 0
-    tls: true
+    tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
       path: /
+      headers:
+        host: in4.wish.ml
   - &id002
     name: 🇺🇸_US_美国_1
+    type: ss
+    server: 212.102.47.198
+    port: 443
+    password: shadowsocks
+    cipher: aes-128-cfb
+  - &id003
+    name: 🇺🇸_US_美国_2
+    type: ss
+    server: 156.146.38.163
+    port: 443
+    password: shadowsocks
+    cipher: aes-128-cfb
+  - &id004
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: trojan
+    server: 36.151.195.48
+    port: 20344
+    udp: true
+    password: TNDSJfNv
+    skip-cert-verify: true
+    network: tcp
+  - &id005
+    name: 🇺🇸_US_美国_3
     type: vmess
     server: russia.com
     port: 8880
@@ -33,69 +58,275 @@ proxies:
       path: /api/v3/download.getFile
       headers:
         host: sssub.v2.001.ssrsub.com
-  - &id003
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
-    type: vmess
-    server: 104.18.19.191
-    port: 2052
-    cipher: auto
-    uuid: aec82fa6-ab70-4d0a-e7fb-422ef729d961
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: helanv6cf.inekokkk.top
-  - &id004
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
-    type: vmess
-    server: 104.18.36.119
-    port: 2052
-    cipher: auto
-    uuid: aec82fa6-ab70-4d0a-e7fb-422ef729d961
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: helanv6cf.inekokkk.top
-  - &id005
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
-    type: vmess
-    server: 104.19.250.15
-    port: 2052
-    cipher: auto
-    uuid: aec82fa6-ab70-4d0a-e7fb-422ef729d961
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: helanv6cf.inekokkk.top
   - &id006
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国
-    type: trojan
-    server: 36.151.195.48
-    port: 20344
-    udp: true
-    password: TNDSJfNv
-    skip-cert-verify: true
-    network: tcp
-  - &id007
-    name: 🇺🇸_US_美国_2
+    name: 🇺🇸_US_美国_4
     type: ss
-    server: 54.212.53.164
+    server: 34.216.1.153
     port: 443
     password: amazonskr05
     cipher: aes-256-cfb
+  - &id007
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 23.154.136.2
+    port: 443
+    cipher: auto
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /linkvws
   - &id008
-    name: 🇺🇸_US_美国_3
+    name: 🇨🇦_CA_加拿大
+    type: vmess
+    server: 158.51.121.36
+    port: 443
+    cipher: auto
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /linkvws
+  - &id009
+    name: 🇺🇸_US_美国->🇺🇦_UA_乌克兰
+    type: vmess
+    server: 172.67.166.192
+    port: 80
+    cipher: auto
+    uuid: cd1db809-2de0-409c-aef5-861e95eff53e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: ua1-vmess.sshmax.xyz
+  - &id010
+    name: 🇷🇺_RU_俄罗斯联邦_1
+    type: vmess
+    server: 45.136.245.240
+    port: 12910
+    cipher: auto
+    uuid: 8259cb1c-dd6c-4739-9c88-af550d977525
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id011
+    name: 🇺🇸_US_美国_6
+    type: trojan
+    server: 172.67.191.234
+    port: 443
+    udp: true
+    password: 7fc8e7f0-bf17-4ace-a9c2-153c5499ddb9
+    sni: dE1.tROJaNvPn.xYZ
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id012
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: vmess
+    server: data-us-v1.shwjfkw.cn
+    port: 20401
+    cipher: auto
+    uuid: b1478e24-4916-3abe-8f17-15931012ecbe
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /debian
+      headers:
+        host: data-us-v1.shwjfkw.cn
+  - &id013
+    name: 🇷🇺_RU_俄罗斯联邦_2
+    type: vmess
+    server: 46.17.45.13
+    port: 17697
+    cipher: auto
+    uuid: 558ff688-d70d-4219-9e59-748289528256
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id014
+    name: 🇵🇱_PL_波兰_1
+    type: ss
+    server: 51.77.53.200
+    port: 6379
+    password: zDNVedRFPQexG9v
+    cipher: aes-256-gcm
+  - &id015
+    name: 🇵🇱_PL_波兰_2
+    type: ss
+    server: 51.77.53.200
+    port: 5004
+    password: g5MeD6Ft3CWlJId
+    cipher: aes-256-gcm
+  - &id016
+    name: 🇵🇱_PL_波兰_3
+    type: ss
+    server: 51.77.53.200
+    port: 8091
+    password: PCnnH6SQSnfoS27
+    cipher: aes-256-gcm
+  - &id017
+    name: 🇵🇱_PL_波兰_4
+    type: ss
+    server: 51.77.53.200
+    port: 4444
+    password: pKEW8JPByTVTLtM
+    cipher: aes-256-gcm
+  - &id018
+    name: 🇵🇱_PL_波兰_5
+    type: ss
+    server: 51.77.53.200
+    port: 8118
+    password: cdBIDV42DCwnfIN
+    cipher: aes-256-gcm
+  - &id019
+    name: 🇵🇱_PL_波兰_6
+    type: ss
+    server: 51.77.53.200
+    port: 8119
+    password: cdBIDV42DCwnfIN
+    cipher: aes-256-gcm
+  - &id020
+    name: 🇵🇱_PL_波兰_7
+    type: ss
+    server: 51.77.53.200
+    port: 2375
+    password: faBAoD54k87UJG7
+    cipher: aes-256-gcm
+  - &id021
+    name: 🇵🇱_PL_波兰_8
+    type: ss
+    server: 51.77.53.200
+    port: 7306
+    password: FoOiGlkAA9yPEGP
+    cipher: aes-256-gcm
+  - &id022
+    name: 🇵🇱_PL_波兰_9
+    type: ss
+    server: 51.77.53.200
+    port: 8881
+    password: kDWvXYZoTBcGkC4
+    cipher: aes-256-gcm
+  - &id023
+    name: 🇵🇱_PL_波兰_10
+    type: ss
+    server: 51.77.53.200
+    port: 6697
+    password: TEzjfAYq2IjtuoS
+    cipher: aes-256-gcm
+  - &id024
+    name: 🇵🇱_PL_波兰_11
+    type: ss
+    server: 51.77.53.200
+    port: 6679
+    password: TEzjfAYq2IjtuoS
+    cipher: aes-256-gcm
+  - &id025
+    name: 🇵🇱_PL_波兰_12
+    type: ss
+    server: 51.77.53.200
+    port: 8882
+    password: kDWvXYZoTBcGkC4
+    cipher: aes-256-gcm
+  - &id026
+    name: 🇵🇱_PL_波兰_13
+    type: ss
+    server: 51.77.53.200
+    port: 5000
+    password: Y6R9pAtvxxzmGC
+    cipher: aes-256-gcm
+  - &id027
+    name: 🇵🇱_PL_波兰_14
+    type: ss
+    server: 51.77.53.200
+    port: 5001
+    password: Y6R9pAtvxxzmGC
+    cipher: aes-256-gcm
+  - &id028
+    name: 🇵🇱_PL_波兰_15
+    type: ss
+    server: 51.77.53.200
+    port: 9102
+    password: e4FCWrgpkji3QY
+    cipher: aes-256-gcm
+  - &id029
+    name: 🇵🇱_PL_波兰_16
+    type: ss
+    server: 51.77.53.200
+    port: 3389
+    password: Y6R9pAtvxxzmGC
+    cipher: aes-256-gcm
+  - &id030
+    name: 🇵🇱_PL_波兰_17
+    type: ss
+    server: 51.77.53.200
+    port: 5003
+    password: g5MeD6Ft3CWlJId
+    cipher: aes-256-gcm
+  - &id031
+    name: 🇵🇱_PL_波兰_18
+    type: ss
+    server: 51.77.53.200
+    port: 7307
+    password: FoOiGlkAA9yPEGP
+    cipher: aes-256-gcm
+  - &id032
+    name: 🇵🇱_PL_波兰_19
+    type: ss
+    server: 51.77.53.200
+    port: 8008
+    password: XKFKl2rULjIp74
+    cipher: aes-256-gcm
+  - &id033
+    name: 🇵🇱_PL_波兰_20
+    type: ss
+    server: 51.77.53.200
+    port: 8009
+    password: XKFKl2rULjIp74
+    cipher: aes-256-gcm
+  - &id034
+    name: 🇵🇱_PL_波兰_21
+    type: ss
+    server: 51.77.53.200
+    port: 8000
+    password: KixLvKzwjekG00rm
+    cipher: aes-256-gcm
+  - &id035
+    name: 🇵🇱_PL_波兰_22
+    type: ss
+    server: 51.77.53.200
+    port: 7001
+    password: RexnBgU7EV5ADxG
+    cipher: aes-256-gcm
+  - &id036
+    name: 🇵🇱_PL_波兰_23
+    type: ss
+    server: 51.77.53.200
+    port: 9101
+    password: e4FCWrgpkji3QY
+    cipher: aes-256-gcm
+  - &id037
+    name: 🇵🇱_PL_波兰_24
+    type: ss
+    server: 51.77.53.200
+    port: 8888
+    password: Y6R9pAtvxxzmGC
+    cipher: aes-256-gcm
+  - &id038
+    name: 🇺🇸_US_美国_7
     type: vmess
     server: russia.com
     port: 2095
@@ -109,20 +340,6 @@ proxies:
       path: /api/v3/download.getFile
       headers:
         host: sssub.v2.001.ssrsub.com
-  - &id009
-    name: 🇺🇸_US_美国_4
-    type: ss
-    server: 212.102.47.198
-    port: 443
-    password: shadowsocks
-    cipher: aes-128-cfb
-  - &id010
-    name: 🇺🇸_US_美国_5
-    type: ss
-    server: 156.146.38.163
-    port: 443
-    password: shadowsocks
-    cipher: aes-128-cfb
 proxy-groups:
   - name: PROXY
     type: select
@@ -159,6 +376,34 @@ proxy-groups:
       - *id008
       - *id009
       - *id010
+      - *id011
+      - *id012
+      - *id013
+      - *id014
+      - *id015
+      - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
+      - *id037
+      - *id038
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -174,6 +419,34 @@ proxy-groups:
       - *id008
       - *id009
       - *id010
+      - *id011
+      - *id012
+      - *id013
+      - *id014
+      - *id015
+      - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
+      - *id037
+      - *id038
   - name: SELECT
     type: select
     proxies:
@@ -187,6 +460,34 @@ proxy-groups:
       - *id008
       - *id009
       - *id010
+      - *id011
+      - *id012
+      - *id013
+      - *id014
+      - *id015
+      - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
+      - *id037
+      - *id038
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
