--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -18,37 +18,34 @@ proxies:
     grpc-opts:
       grpc-service-name: 443trojan
   - &id002
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
-    type: vmess
-    server: s1c.v2.v001sss.xyz
-    port: 2082
-    cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
-    alterId: 0
-    tls: false
+    name: 🇺🇸_US_美国_2
+    type: trojan
+    server: 104.21.69.44
+    port: 443
+    udp: true
+    password: qj1Dz1CJmFQRhWr1SP80aA
+    sni: cdn-21.gsmxreality.com
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: s1c.v2.v001sss.xyz
+    network: grpc
+    grpc-opts:
+      grpc-service-name: 443trojan
   - &id003
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度
+    name: 🇺🇸_US_美国_3
     type: vmess
-    server: hk.wish.ml
-    port: 2052
+    server: russia.com
+    port: 8880
     cipher: auto
-    uuid: c286daa2-59de-455c-8de8-ec032b6ce2e8
+    uuid: 64a57b5f-45e0-40c3-8316-97d0ff53fd96
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /api/v3/download.getFile
       headers:
-        host: in3.wish.ml
+        host: sssub.v2.001.ssrsub.com
   - &id004
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
     type: vmess
     server: 104.21.8.157
     port: 2082
@@ -63,79 +60,18 @@ proxies:
       headers:
         host: s1c.v2.v001sss.xyz
   - &id005
-    name: 🇧🇩_BD_孟加拉国
-    type: ss
-    server: 103.106.2.90
-    port: 8881
-    password: oxp4Xr64OKpXV127Zwtzl14P8L8PovqbFGPHbnbhRf7CxCSW1E
-    cipher: chacha20-ietf-poly1305
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: vmess
+    server: 183.240.179.207
+    port: 30013
+    cipher: auto
+    uuid: 5bd5899a-4b78-4d75-8570-4d21b43422c4
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
   - &id006
-    name: 🇺🇸_US_美国_2
-    type: trojan
-    server: 104.21.69.44
-    port: 443
-    udp: true
-    password: qj1Dz1CJmFQRhWr1SP80aA
-    sni: cdn-21.gsmxreality.com
-    skip-cert-verify: true
-    network: grpc
-    grpc-opts:
-      grpc-service-name: 443trojan
-  - &id007
-    name: 🇺🇸_US_美国_3
-    type: ss
-    server: 52.88.161.5
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id008
-    name: 🇺🇸_US_美国_4
-    type: ss
-    server: 156.146.38.163
-    port: 443
-    password: shadowsocks
-    cipher: aes-128-cfb
-  - &id009
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: 23.154.136.2
-    port: 443
-    cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /linkvws
-  - &id010
-    name: 🇨🇦_CA_加拿大
-    type: vmess
-    server: 158.51.121.36
-    port: 443
-    cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /linkvws
-  - &id011
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: vmess
-    server: 45.136.245.240
-    port: 12910
-    cipher: auto
-    uuid: 8259cb1c-dd6c-4739-9c88-af550d977525
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id012
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
     type: vmess
     server: 172.67.130.140
     port: 2082
@@ -149,13 +85,28 @@ proxies:
       path: /
       headers:
         host: s1c.v2.v001sss.xyz
-  - &id013
-    name: 🇺🇸_US_美国_6
+  - &id007
+    name: 🇺🇸_US_美国_4
     type: vmess
-    server: 172.67.204.84
-    port: 80
+    server: russia.com
+    port: 2095
     cipher: auto
-    uuid: 753d0d83-3f5b-4821-860e-082f0b3db609
+    uuid: 64a57b5f-45e0-40c3-8316-97d0ff53fd96
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: sssub.v2.001.ssrsub.com
+  - &id008
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
+    type: vmess
+    server: hk.wish.ml
+    port: 2052
+    cipher: auto
+    uuid: c286daa2-59de-455c-8de8-ec032b6ce2e8
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -163,8 +114,107 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: no1-vmess.sshmax.xyz
+        host: in3.wish.ml
+  - &id009
+    name: 🇷🇺_RU_俄罗斯联邦
+    type: vmess
+    server: 45.136.245.240
+    port: 12910
+    cipher: auto
+    uuid: 8259cb1c-dd6c-4739-9c88-af550d977525
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id010
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: vmess
+    server: data-us-v1.shwjfkw.cn
+    port: 20401
+    cipher: auto
+    uuid: b1478e24-4916-3abe-8f17-15931012ecbe
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /debian
+      headers:
+        host: data-us-v1.shwjfkw.cn
+  - &id011
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
+    type: vmess
+    server: 172.67.164.78
+    port: 2052
+    cipher: auto
+    uuid: c286daa2-59de-455c-8de8-ec032b6ce2e8
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: in3.wish.ml
+  - &id012
+    name: 🇵🇱_PL_波兰_1
+    type: ss
+    server: 51.77.53.200
+    port: 6697
+    password: TEzjfAYq2IjtuoS
+    cipher: aes-256-gcm
+  - &id013
+    name: 🇵🇱_PL_波兰_2
+    type: ss
+    server: 51.77.53.200
+    port: 8119
+    password: cdBIDV42DCwnfIN
+    cipher: aes-256-gcm
   - &id014
+    name: 🇵🇱_PL_波兰_3
+    type: ss
+    server: 51.77.53.200
+    port: 5004
+    password: g5MeD6Ft3CWlJId
+    cipher: aes-256-gcm
+  - &id015
+    name: 🇵🇱_PL_波兰_4
+    type: ss
+    server: 51.77.53.200
+    port: 4444
+    password: pKEW8JPByTVTLtM
+    cipher: aes-256-gcm
+  - &id016
+    name: 🇵🇱_PL_波兰_5
+    type: ss
+    server: 51.77.53.200
+    port: 6379
+    password: zDNVedRFPQexG9v
+    cipher: aes-256-gcm
+  - &id017
+    name: 🇧🇩_BD_孟加拉国
+    type: ss
+    server: 103.106.2.90
+    port: 8881
+    password: oxp4Xr64OKpXV127Zwtzl14P8L8PovqbFGPHbnbhRf7CxCSW1E
+    cipher: chacha20-ietf-poly1305
+  - &id018
+    name: 🇺🇸_US_美国_5
+    type: ss
+    server: 156.146.38.163
+    port: 443
+    password: shadowsocks
+    cipher: aes-128-cfb
+  - &id019
+    name: 🇺🇸_US_美国_6
+    type: ss
+    server: 52.88.161.5
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id020
     name: 🇺🇸_US_美国_7
     type: vmess
     server: upload.ir
@@ -179,28 +229,39 @@ proxies:
       path: /
       headers:
         host: is3-vmess.sshmax.xyz
-  - &id015
+  - &id021
     name: 🇺🇸_US_美国_8
-    type: vmess
-    server: russia.com
-    port: 2095
-    cipher: auto
-    uuid: 64a57b5f-45e0-40c3-8316-97d0ff53fd96
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: sssub.v2.001.ssrsub.com
-  - &id016
-    name: 🇺🇸_US_美国_9
     type: ss
     server: 212.102.47.198
     port: 443
     password: shadowsocks
     cipher: aes-128-cfb
+  - &id022
+    name: 🇮🇷_IR_伊朗
+    type: vmess
+    server: 91.107.130.229
+    port: 35262
+    cipher: auto
+    uuid: 2d5e5a73-8fa1-4c43-b67f-c0211ba34a03
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id023
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: 172.67.204.84
+    port: 80
+    cipher: auto
+    uuid: 753d0d83-3f5b-4821-860e-082f0b3db609
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: no1-vmess.sshmax.xyz
 proxy-groups:
   - name: PROXY
     type: select
@@ -243,6 +304,13 @@ proxy-groups:
       - *id014
       - *id015
       - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -264,6 +332,13 @@ proxy-groups:
       - *id014
       - *id015
       - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
   - name: SELECT
     type: select
     proxies:
@@ -283,6 +358,13 @@ proxy-groups:
       - *id014
       - *id015
       - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
